# SpaceCracker

./: .gitignore  Dockerfile  README.md  README_PRO.md  VPS_GUIDE.md  __init__.py  __main__.py  cli.py  cli_v2.py  config.json  config.yaml  config_vps.json  demo_v2.py  docker-compose.yml  evyl.py  install.sh  launch.py  panel.py  pyproject.toml  requirements.txt  run_webui.py  scanner_legacy.py  setup.cfg  spacecracker_simple  targets.txt  test.py  test_enhanced_modules.py  test_interactive.py  test_panel.py  vps_scanner.py
config/: paths.txt  services.yaml  settings.yaml
configs/: config.example.json
data/: paths.txt
examples/: targets.txt
modules/: __init__.py  cve_exploits.py  ggb_scanner.py  git_scanner.py  js_scanner.py  scanner_base.py  validators.py
scripts/: generate_sample_targets.sh
spacecracker/: cli.py
spacecracker/core/: config.py  logging_setup.py  rate_limiter.py  registry.py  reporting.py  runner.py  stats_manager.py  utils.py
spacecracker/modules/: base.py  credential_scraper.py  cve_k8s_podescape_2024_3177.py  exploit_runner.py  ggb_scanner.py  git_scanner.py  js_scanner.py  laravel_scanner.py  path_scanner.py  smtp_scanner.py
spacecracker/ui/: __init__.py  app.py  routes.py
spacecracker/utils/: __init__.py  http.py  language.py  performance.py  progress.py  text.py
spacecracker/validators/: __init__.py  aws_ses_validator.py  (+1 more)
src/: __init__.py
tests/: test_config.py  test_registry.py
utils/: __init__.py  rate_limiter.py  regex_patterns.py  reporting.py  telegram_bot.py
wordlists/: admin_paths.txt  common_paths.txt
(+46 files in other folders)
