[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacecracker"
version = "0.1.0"
description = "Advanced Modular Web Exposure & Secret Discovery Toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.8.0"
]

[project.scripts]
spacecracker = "spacecracker.cli:main"